# blackjackpp

./: meson.build
src/server/: meson.build
src/server/headers/: gameManager.hpp
src/server/src/: main.cpp
